# ttsprojects

./: .gitignore  .indent.pro  README.md
banana-pi/: README.md
dsp/scilab/: fir1coeffs.sci
emacspeak/: README.md  build.sh
emacspeak/bison-parser/: emacspeak.y
emacspeak/esproxy/: README.md
generic/emacspeak/emacsespeakx86/: .gitignore  Makefile.am  Makefile.in  README  THANKS  aclocal.m4  configure  configure.ac
generic/emacspeak/emacsespeakx86/src/: .gitignore  Makefile.am  Makefile.in  debug.c  debug.h  emacspeak.l  emacspeak.tab.c  emacspeak.tab.h  emacspeak.y  espeak.c  espeak.h  lex.yy.c  lexer.c  list.c  parser.c  parser.h  server.c  server.h  system.c  tts_engine.h  tts_espeak.c  tts_server.c
generic/emacspeak/espeakmrx86/: Makefile.in  README  README.md  config.h.in  configure  configure.ac  configure.ac.ng.patch
generic/emacspeak/espeakmrx86/src/: .gitignore  Makefile.am  Makefile.in  debug.h  lexer.l  parser.y  pcregex.c  server.c  server.h  system.c  system.h
generic/speechd-up-ng/: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  config.h.in  configure  configure.ac
generic/speechd-up-ng/config/: .gitignore  Makefile.am  Makefile.in  speechd-up.service.in  speechd-upd.conf.in  speechd-upd.service.in
generic/speechd-up-ng/doc/: mold  mold2  speechd-up.info  speechd-up.texi
generic/speechd-up-ng/src/: .gitignore  Makefile.am  Makefile.in  options.c  options.h  speechd-up.c
libilcpcmrender/: Makefile  core.c  coretest.c  ilcpcmrender.h
libomxilpcmrender/: Makefile  README.md  core.c  list_test.c  main.c  omxilpcmrender.h
librpipcmrender/: Makefile  README.md  core.c  debug.h  list.c  list.h  list_test.c  main.c  pcm_ring_buffer.c  queue.h  queue_test.c  rpipcmrender.h
notes/: README.md  X11.md  speech_manual.txt
piespeak/: Makefile  README.md  wave_rpi.cpp
raspberry-pi/: README.md
raspberry-pi-audio/: README.md
raspberry-pi/espiespeak/: Makefile  configure.ac  emacspeak-module.h  emacspeak-sd.c  emacspeak.l  emacspeak.y
raspberry-pi/espiespeak/src/: .gitignore  README  emacspeak-module.h  emacspeak-sd.c  emacspeak.l  emacspeak.tab.c  emacspeak.tab.h  emacspeak.y  emacspeakproto.h  lex.yy.c  lexer.l  make_links.sh  parser.y  tts_engine.h  tts_espeak.c
raspberry-pi/libilctts/: .gitignore  HISTORY  Makefile.am  Makefile.in  README  README.md  THANKS  TODO  config.h.in  configure  configure.ac  libtool
raspberry-pi/libilctts/autoconfiscate/: .gitignore  INSTALL  Makefile.am  Makefile.in  NOTES  README  README.md  TODO  config.h.in  configure  configure.ac  libtool  notes.md
raspberry-pi/libilctts/autoconfiscate/autom4te.cache/: output.1  requests  traces.0  traces.1
raspberry-pi/libilctts/autoconfiscate/include/: Makefile.in  ilctts_lib.h
raspberry-pi/libilctts/autoconfiscate/src/: Makefile  Makefile.am  Makefile.in  config.h  core.c  goodbye.c  hello.c  ringbuffer.c
raspberry-pi/libilctts/autoconfiscate/tests/: configure.ac
raspberry-pi/libilctts/autoconfiscate/tests/test00/: Makefile.am
raspberry-pi/libilctts/autoconfiscate/tests/test01/: Makefile.am
raspberry-pi/libilctts/autoconfiscate/tests/test02/: testlib.c
raspberry-pi/libilctts/config/: Makefile.in
raspberry-pi/libilctts/include/: Makefile.am
raspberry-pi/libilctts/libtests/test00/: Makefile  testlib  testlib00.c
raspberry-pi/libilctts/libtests/test01/: testlib.c  wav2raw.sh
raspberry-pi/libilctts/libtests/test02/: testlib  testlib.c
raspberry-pi/libilctts/libtests/test04/: testlib.c
raspberry-pi/libilctts/libtests/test04/src/: testlib.c
raspberry-pi/libilctts/src/: Makefile  Makefile.am  Makefile.in  core.c  core.h  debug.c  debug.h  flip.sh  ilctts_lib.h  list.c  queue.c  queue.h  ringbuffer.c  ringbuffer.h  utils.h
raspberry-pi/libilctts/tests/: Makefile.am
raspberry-pi/libilctts/tests/test01/: testlib01.c
raspberry-pi/libilctts/tests/test02/: Makefile.am  README.md
raspberry-pi/libilctts/tests/test03/: Makefile.am  testlib03.c
raspberry-pi/libilctts/tests/test04/: Makefile.am
raspberry-pi/libilctts/unit_tests/testlist/: Makefile
raspberry-pi/libilctts/unit_tests/testqueue/: Makefile  testqueue.c
raspberry-pi/libilctts/unit_tests/testringbuffer/: testrb
raspberry-pi/libpipcmrender/src/: Makefile.am  Makefile.in  core.c  core.h  logging.c  logging.h  pipcmrender_lib.h  utils.c
raspberry-pi/omx/: BROADCOM  Makefile.am
raspberry-pi/omx/config/: Makefile.am
raspberry-pi/omx/libtests/test04/: Makefile
raspberry-pi/omx/src/: Makefile.am  Makefile.in  Makefile.old  core.c  core.h  ilctts_lib.h  utils.c
raspberry-pi/piespeakup/autoconfiscate/: .gitignore  Makefile.am  Makefile.in  NOTES  configure  configure.ac
raspberry-pi/piespeakup/autoconfiscate/conf/: Makefile.am  piespeakup.service.in
raspberry-pi/piespeakup/autoconfiscate/config/: 01-libilctts.conf.in  Makefile.am  Makefile.in  piespeakup.conf.in  piespeakup.service.in
raspberry-pi/piespeakup/autoconfiscate/doc/: Makefile.in  piespeakup.8
raspberry-pi/piespeakup/autoconfiscate/include/: .gitignore  Makefile.in
raspberry-pi/piespeakup/autoconfiscate/service/: Makefile.am
raspberry-pi/piespeakup/autoconfiscate/src/: Makefile.am  Makefile.in  espeak.c  espeakup.h
raspberry-pi/piespeakup/autoconfiscate/systemd/: Makefile.am  Makefile.in  piespeakup.conf  piespeakup.service
raspberry-pi/piespeakup/config/: Makefile.am  Makefile.in  speakup_soft.conf
raspberry-pi/piespeakup2/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NOTES  README  THANKS  TODO  config.h.in  configure  configure.ac  configure.ac.ng.patch
raspberry-pi/piespeakup2/config/: .gitignore  Makefile.am  Makefile.in  piespeakup.service.in  piespeakup2.conf.in  piespeakup2.service.in  piespeakup2restart.service  piespeakup2restart.timer  speakup_soft.conf
raspberry-pi/piespeakup2/doc/: Makefile.in  piespeakup.8  piespeakup2.8
raspberry-pi/piespeakup2/src/: .gitignore  Makefile.am  Makefile.in  cli.c  espeak.c  espeakup.h  espeakup.h.ng.patch  piespeakup.c  softsynth.c
speech-dispatcher/: README.md
ssip/: README.md
windows/: .gitignore
(+325 files in other folders)
